# codage

C/LaboUnix2024_Enonce-main/: AccesBD  AccesBD.cpp  Caddie  Caddie.cpp  Client  CreationBD  FichierClient.cpp  FichierClient.h  Gerant  Publicite  Publicite.cpp  Serveur  Serveur.cpp  makefile  protocole.h  readme.md  windowclient.cpp
C/exercice1/: UNIX_Exercice1  mainwindow.cpp  makefile
C/exercice2/: FichierUtilisateur.cpp  FichierUtilisateur.h  makefile  mywindow.cpp  mywindow.h  readme.md
C/exercice3/: UNIX_Exercice3  mainwindowex3.cpp  readme.md
C/exercice5/: Serveur.cpp  makefile  readme.md  windowclient.cpp
CPP/Etape01/: Event.cpp  Event.h  Test1  Test1.cpp  makefile
CPP/Etape02/: Event.cpp  Event.h  Test02  Time.cpp  Time.h  Timing.cpp  Timing.h  makefile
CPP/Etape03/: Event.cpp  Event.h  Test03  Time.cpp  Time.h  Timing.cpp  Timing.h  makefile
CPP/Etape04/: Classroom.cpp  Classroom.h  Group.cpp  Group.h  Professor.cpp  Professor.h  Schedulable.cpp  Schedulable.h  Test4  makefile
CPP/Etape05/: Event.cpp  Event.h  Test5.cpp  Time.cpp  Time.h  TimeException.cpp  Timing.cpp  Timing.h  makefile
CPP/Etape06/: C.xml  Classroom.cpp  E1.xml  (+17 more)
CPP/Etape9/: CMakeLists.txt
CPP/Etape9/includes/: Event.h  Schedulable.h  Timetable.h  TimingException.h  applichorairewindow.h
CPP/Etape9/sources/: Event.cpp  Professor.cpp  TimeException.cpp  Timetable.cpp  Timing.cpp  XmlFileSerializerException.cpp  applichorairewindow.cpp
Etape5/: AccesBD  AccesBD.cpp  Caddie  Caddie.cpp  Client  FichierClient.h  Gerant  Publicite  Serveur  Serveur.cpp  windowclient.cpp
(+182 files in other folders)
